--- a/ai-assistant.css
+++ b/ai-assistant.css
@@ -110,6 +110,7 @@
 }
 
 #chat-header-close-23f7a9 {
+  padding: 0;
   background: none;
   border: none;
   font-size: 16px;
@@ -213,6 +214,7 @@
 }
 
 #chat-send-23f7a9, #chat-clear-history-23f7a9 {
+  padding: 0;
   width: 32px;
   height: 32px;
   border: none;
